<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/leftTop"
        android:text="@string/tv1"
        android:textSize="20sp"
        android:textColor="#318214"
        android:textStyle="bold"
        android:background="@android:color/black"

        android:layout_width="80dip"
        android:layout_height="40dip"
        android:gravity="center"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        />
    <TextView
        android:id="@+id/rightTop"
        android:text="@string/tv2"
        android:textSize="20sp"
        android:textColor="#318214"
        android:textStyle="bold"
        android:background="@android:color/black"

        android:layout_width="80dip"
        android:layout_height="40dip"
        android:gravity="center"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />
    <TextView
        android:id="@+id/leftBottom"
        android:text="@string/tv3"
        android:textSize="20sp"
        android:textColor="#318214"
        android:textStyle="bold"
        android:background="@android:color/black"

        android:layout_width="80dip"
        android:layout_height="40dip"
        android:gravity="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        />
    <TextView
        android:id="@+id/rightBottom"
        android:text="@string/tv4"
        android:textSize="20sp"
        android:textColor="#318214"
        android:textStyle="bold"
        android:background="@android:color/black"

        android:layout_width="80dip"
        android:layout_height="40dip"
        android:gravity="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />

    <Button
        android:id="@+id/clickButton"
        android:background="@android:color/holo_red_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/click_button"
        android:textColor="@android:color/white"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        />

</androidx.constraintlayout.widget.ConstraintLayout>