<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTop"
        android:layout_width="80dip"
        android:layout_height="80dip"

        android:background="@android:color/black"
        android:gravity="center"
        android:text="@string/tv1"
        android:textColor="#318214"
        android:textSize="40sp"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/textViewCenter"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="100dp"

        android:background="@android:color/black"
        android:elevation="10dp"
        android:gravity="center"
        android:text="@string/tv2"
        android:textColor="#318214"
        android:textSize="40sp"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/textViewMiddle"
        android:layout_width="120dip"
        android:layout_height="120dip"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="80dp"

        android:background="@android:color/darker_gray"
        android:elevation="5dp"
        android:gravity="center"
        android:text="@string/tv4"
        android:textColor="#318214"
        android:textSize="40sp"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/textViewRight"
        android:layout_width="120dip"
        android:layout_height="120dip"

        android:background="@android:color/holo_blue_light"
        android:elevation="5dp"

        android:gravity="center"
        android:text="@string/tv3"
        android:textColor="#318214"
        android:textSize="40sp"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/textViewLeft"
        android:layout_width="90dip"
        android:layout_height="120dip"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="140dp"

        android:background="@android:color/black"
        android:elevation="1dp"

        android:gravity="center"
        android:text="@string/tv5"
        android:textColor="#318214"
        android:textSize="40sp"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/clickButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_dark"

        android:text="@string/click_button"
        android:textColor="@android:color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/textViewMiddle"

        />
</androidx.constraintlayout.widget.ConstraintLayout>