<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@android:color/holo_orange_light"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/y_axis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/textViewTop"
        app:layout_constraintWidth_percent=".50"
        android:layout_height="80dip"
        android:layout_marginTop="105dp"

        android:background="@android:color/black"
        android:gravity="center"
        android:text="@string/tv1"
        android:textColor="#318214"
        android:textSize="40sp"
        android:textStyle="bold"

        app:layout_constraintLeft_toLeftOf="@id/y_axis"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/clickButton"
        app:layout_constraintWidth_percent=".75"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:background="@android:color/holo_red_dark"
        android:text="@string/click_button"
        android:textColor="@android:color/white"

        app:layout_constraintTop_toBottomOf="@id/textViewTop"
        app:layout_constraintLeft_toLeftOf="@id/y_axis"
        />

    <TextView
        android:id="@+id/textViewMiddle"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:layout_marginTop="210dp"

        android:background="@android:color/black"
        android:gravity="center"
        android:text="@string/tv2"
        android:textColor="#318214"
        android:textSize="40sp"
        android:textStyle="bold"

        app:layout_constraintLeft_toLeftOf="@id/y_axis"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/clickButton"
        />
    <TextView
        android:id="@+id/textViewBottom"
        android:layout_width="80dip"
        android:layout_height="80dip"

        android:background="@android:color/black"
        android:gravity="center"
        android:text="@string/tv3"
        android:textColor="#318214"
        android:textSize="40sp"
        android:textStyle="bold"

        app:layout_constraintLeft_toLeftOf="@id/y_axis"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        />

</androidx.constraintlayout.widget.ConstraintLayout>